--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Kavitatopiwala.GitHub.io</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">Welcome to my Homepage</h1>
+      <h2 class="project-tagline">This is Kavitas homepage</h2>
     </section>
 
     <section class="main-content">
